[project]
name = "glovo-hourly-demand-forecast"
version = "0.1.0"
description = "Hourly demand forecasting project for Glovo"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "nbformat==5.4.0",
    "sktime>=0.30.0,<0.31.0",
    "scikit-learn>=1.2.2,<2.0",
    "pmdarima>=2.0.3,<3.0",
    "mlflow>=2.11.3,<3.0",
    "ipykernel>=6.29.4,<7.0",
    "xgboost>=2.1.4,<3.0",
    "ortools>=9.12.4544,<10.0",
    "pandas>=2.2.3,<3.0",
    "seaborn>=0.13.2,<0.14",
    "plotly>=6.0.1,<7.0",
    "marimo>=0.23.2",
    "yfinance>=1.3.0",
    "lightgbm>=4.6.0",
]

[tool.uv]
package = false

[tool.marimo.display]
default_width = "full"